--- a/spring-boot-example-project/pom.xml
+++ b/spring-boot-example-project/pom.xml
@@ -22,8 +22,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.hazelcast</groupId>
-			<artifactId>hazelcast-all</artifactId>
-			<version>4.2.4</version>
+			<artifactId>hazelcast-spring</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
